DC,Dileep| 2505 | Fixing table wrap on firefox

--- a/datawinners/media/css/scss/section_application.scss
+++ b/datawinners/media/css/scss/section_application.scss
@@ -68,6 +68,7 @@
   width: 910px;
   overflow-x: auto;
   margin-bottom: 30px;
+  clear: both;
   .styled_table {
     margin-bottom: 0;
   }
